--- a/calander/login_jsp/.settings/org.eclipse.core.resources.prefs
+++ b/calander/login_jsp/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//WebContent/calander/s_delete_view.jsp=UTF-8
 encoding//WebContent/stylesheets/main.css=UTF-8
